[gd_scene load_steps=5 format=2]

[ext_resource path="res://Font Large.tres" type="DynamicFont" id=1]
[ext_resource path="res://Multiplayer-menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=3]
[ext_resource path="res://Font Extra Large.tres" type="DynamicFont" id=4]

[node name="Network_setup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Multiplayer_configure"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_top = 25.0
margin_right = 480.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 4 )
text = "RYMDSPEL 15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username_text_edit" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_top = 125.0
margin_right = 480.0
margin_bottom = 325.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Enter username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -479.0
margin_top = 350.0
margin_right = 481.0
margin_bottom = 550.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_top = 575.0
margin_right = 480.0
margin_bottom = 775.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_top = 800.0
margin_right = 480.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Devic_ip_adress" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -55.0
margin_right = 960.0
margin_bottom = -25.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_game" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -280.0
margin_right = 480.0
margin_bottom = -80.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_game" to="." method="_on_Start_game_pressed"]
